2015-12-15:

- Bug solved in "todo tags". Now it works when it is called from any directory
- When a task is done, its finalization date and time is recorded.